name:                vx-asm
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              zukonake
maintainer:          zukonake@protonmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Error, Lexer, Parser, Assembler, Syntax
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10
                     , parsec
                     , bytestring
                     , mtl
  ghc-options:         -dynamic -Wall
  default-language:    Haskell2010

executable vx-asm
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10
                     , parsec
                     , bytestring
                     , mtl
  ghc-options:         -dynamic -Wall
  default-language:    Haskell2010

--test-suite test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base >=4.9 && <4.10
--                     , hspec
--                     , QuickCheck
--                     , v16-asm
--  ghc-options:         -dynamic -Wall
--  default-language:    Haskell2010
