name:                vx-asm
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              zukonake
maintainer:          zukonake@protonmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, vortex
cabal-version:       >=1.10

library
  exposed-modules:     Vortex, Error, Lexer, Parser, Assembler, Syntax
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10
                     , parsec
                     , bytestring
                     , mtl
  ghc-options:         -dynamic -Wall
  default-language:    Haskell2010
  c-sources:           vortex/vortex.c
  include-dirs:        vortex
  includes:            vortex.h
  install-includes:    vortex.h

executable vx-asm
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10
                     , parsec
                     , bytestring
                     , mtl
  ghc-options:         -dynamic -Wall
  default-language:    Haskell2010
  c-sources:           vortex/vortex.c
  include-dirs:        vortex
  includes:            vortex.h
  install-includes:    vortex.h
